# MLIR-Brainfuck

./: CMakeLists.txt  README.md
bf-opt/: CMakeLists.txt  bf-opt.cpp
bf-plugin/: CMakeLists.txt  bf-plugin.cpp
bf-translate/: CMakeLists.txt  bf-translate.cpp
bf_scripts/: cell_width.mlir  factor.mlir  factorials.bf  factorials.mlir  golden_ratio.bf  golden_ratio.mlir  hello_world.mlir  hw_1.mlir  hw_2.mlir  hw_3.mlir  hw_4.mlir  input_loop.mlir  mandelbrot.bf  mandelbrot.mlir
bf_scripts/exp/: double_in.bf  set_left_loop.bf  set_loop.bf  set_right_loop.bf
bf_scripts/test/: decrement.bf  decrement.mlir  increment.mlir  input.mlir  module.mlir  set_left.bf  set_left.mlir  set_right.bf  set_right.mlir  shift_left.bf  shift_left.mlir  shift_right.bf  shift_right.mlir  tape_crash.bf  tape_crash.mlir  tape_size.bf  tape_size.mlir
docs/Bf/: BfDialect.md  BfOps.md
docs/BfPointer/: BfPointerBase.md  BfPointerOps.md
docs/BfRed/: BfRedBase.md  BfRedOps.md
include/: CMakeLists.txt
include/Bf-c/: Dialects.h
include/Bf/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/Bf/Conversion/BfOptToExplicitBf/: BfOptToExplicitBf.h
include/Bf/Dialect/: CMakeLists.txt
lib/: CMakeLists.txt
lib/Bf/Conversion/: CMakeLists.txt
lib/Bf/Dialect/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Dialects.cpp
python/: BfExtension.cpp  CMakeLists.txt
python/mlir_bf/dialects/: BfOps.td  bf.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py  lit.site.cfg.py.in
test/Bf/integration/: bf-to-mlir-bf_test.bf  hello_world.bf.ig  hello_world.mlir.ig
test/CAPI/: CMakeLists.txt  bf-capi-test.c
test/python/: smoketest.py
tools/bf-to-mlir/: __init__.py  bf-to-mlir_bf.py
tools/speed_test/: speed_test.py
(+51 files in other folders)
